# mineserv

./: .env.example  .gitignore  Cargo.toml  README.md  mineserv.service
api-server/: Cargo.toml
api-server/src/: auth.rs  db.rs  main.rs  state.rs
api-server/src/routes/: config.rs  console.rs  files.rs  mod.rs  plugins.rs  servers.rs  stats.rs
frontend/: app.js  index.html  style.css
scripts/: setup_linux.sh
server-manager/: Cargo.toml
server-manager/src/: config.rs  downloader.rs  lib.rs  monitor.rs  plugins.rs  process.rs  types.rs  world.rs
