[package]
name = "server-manager"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# HTTP client for downloading server JARs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Process management
tokio-process = "0.2"

# File system operations
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Configuration parsing
java-properties = "2.0"

# Compression for world backups
zip = "2.2"

# System monitoring
sysinfo = "0.32"
libc = "0.2"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Async channels
tokio-stream = { version = "0.1", features = ["io-util"] }

# Time
chrono = "0.4"

# URL encoding
urlencoding = "2.1"
